...
                              }).toList())
                        ],
                      )
                    : Padding(padding: EdgeInsets.zero),
                Center(
                    child: ElevatedButton(
                        key: Key("cart_btn"),
                        onPressed: () async {
                          final sharePreference =
                              await SharedPreferences.getInstance();
                          String? shareUser = sharePreference.getString("user");
                          if (shareUser == null) {
                            GoogleSignIn _googleSignIn = GoogleSignIn(
...
                  padding: EdgeInsets.only(top: 5, left: 5),
                  child: Text("ราคา ${_product.price}"),
                ),
                Padding(
                  padding: EdgeInsets.only(top: 5, left: 5),
                  child: Text(
                    "รายละเอียด",
                    style: TextStyle(fontWeight: FontWeight.bold),
                  ),
                ),
                Padding(
                  padding: EdgeInsets.only(top: 5, left: 5),
                  child: Text(_detail),
...
